--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         .button-container, .rounding-container {
             display: flex;
             justify-content: center;
+            flex-wrap: wrap;
             gap: 10px;
             margin: 20px;
         }
